# archimedes-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .dockerignore  .gitignore  Dockerfile  README.md  archimedes.json  archimedes.toml  conda-environment-m1.yaml  pyproject.toml  requirements.self  requirements.txt
