[tool.poetry]
name = "archimedes-cookiecutter"
version = "0.2.2"
description = ""
authors = ["Jo Vederhus <jo.vederhus@optimeering.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
cookiecutter = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
