[tool.poetry]
name = "archimedes-cookiecutter"
version = "0.2.4"
description = ""
authors = ["Jo Vederhus <jo.vederhus@optimeering.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
cookiecutter = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
