[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.0.2"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
boto3 = "*"
click = "*"
coverage = "*"
flake8 = "*"
python-dotenv = ">=0.5.1"
tensorflow = "*"
notebook = "*"
# keras = "*"
streamlit = "*"
mlflow = "*"
sklearn = "*"
pandas = "*"
archimedes-python-client = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
