[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
boto3 = "*"
click = "*"
coverage = "*"
flake8 = "*"
python-dotenv = ">=0.5.1"
tensorflow = ">=2.4.4,!=2.5.0,!=2.5.1,!=2.6.0"
# markdown is a sub-dependency of tensorflow; excluding 3.3.5 because it has a bug in dependency specification
markdown = "!=3.3.5"
notebook = "*"
# keras = "*"
streamlit = "*"
mlflow = "*"
sklearn = "*"
pandas = "*"
archimedes-python-client = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
