[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
boto3 = "*"
click = "*"
coverage = "*"
flake8 = "*"
python-dotenv = ">=0.5.1"
tensorflow = { version = ">=2.4.4,!=2.5.0,!=2.5.1,!=2.6.0", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'"}
tensorflow-macos = { version = "*", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
tensorflow-metal = { version = "*", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
notebook = "*"
# keras = "*"
streamlit = "*"
mlflow = "*"
sklearn = "*"
pandas = "*"
archimedes-python-client = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
